monitoring-stack/prometheus/prometheus-wheel-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: prometheus-wheel-tls
  labels:
    prometheus: prometheus-wheel
  name: prometheus-wheel
spec:
  ports:
  - name: metrics
    port: 9091
    targetPort: metrics
  - name: web
    port: 9093
    targetPort: web
  selector:
    app: prometheus
    prometheus: wheel
  sessionAffinity: ClientIP
